[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "lubrikit"
version = "0.1.0"
description = "SDK for data collection, ingestion, processing, and export."
authors = [
    {name = "Joshua Poirier", email = "josh.poirier@gmail.com"},
]
readme = "README.md"
requires-python = ">=3.12,<4.0"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
]
dependencies = []

[project.urls]
Repository = "https://github.com/Lubricate-AI/lubrikit"

[project.optional-dependencies]
dev = [
    "mypy>=1.8.0",
    "pdoc>=14.4.0",
    "pytest>=8.0.0",
    "pytest-cov>=4.0.0",
    "ruff>=0.2.0",
    "typos>=1.16.0",
    "yamllint>=1.35.0",
]

[tool.ruff]
target-version = "py312"
line-length = 88
fix = true
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
ignore = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
warn_unused_ignores = true
disallow_untyped_defs = true
disallow_any_unimported = true
no_implicit_optional = true
check_untyped_defs = true
show_error_codes = true

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q --strict-markers"
testpaths = [
    "tests",
]

[tool.coverage.run]
source = ["lubrikit"]

[tool.coverage.report]
omit = [
    "*/__init__.py",
    "*/__main__.py",
]
exclude_also = [
    "raise NotImplementedError",
    "if TYPE_CHECKING",
    "@abstractmethod",
]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
]

[tool.uv]
prerelease = "allow"
